# simple_chat

./: CMakeLists.txt  README.md  asd.c
client/: CMakeLists.txt  socketClient.c
server/: CMakeLists.txt
server/src/: socketServer.c
utilities/: CMakeLists.txt
utilities/include/: socketUtil.h
utilities/src/: socketUtil.c
